--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -785,7 +785,7 @@
     <string name="dac49">1</string>
 
     //50
-    <string name="grm_c50" >It\'s children's duty to obey their parents</string>
+    <string name="grm_c50" >It\'s children\'s duty to obey their parents</string>
     <string name="grm_c50a">Children are obeyed to their parents</string>
     <string name="grm_c50b">Children are supposed to obey their parents</string>
     <string name="grm_c50c">Duty is obeyed by children to their parents</string>
